--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.home.HomeActivity">
+    tools:context=".activities.HomeActivity">
 
     <com.whitestudios.stepper.components.navigation.Navigation
         android:id="@+id/navigation"
